# grpc-protos

./: .gitignore  DEPLOYMENT_STATUS.md  README.md  RELEASE_PROCESS.md  buf.gen.yaml  buf.yaml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: auto-generate.yml  auto-release.yml  cli-tests.yml  pr-validation.yml  release.yml  validate-protos.yml
docs/: COLLABORATIVE_WORKFLOW_DESIGN.md
protos/common/: error.proto  metadata.proto  pagination.proto
protos/services/backtest/v1/: backtest_service.proto
protos/services/genai/v1/: chatops.proto  dsl_validator.proto  ir_converter.proto  narrative.proto  strategy_builder.proto
protos/services/indicator/v1/: indicator_service.proto
protos/services/market_data/v1/: market_data_service.proto
protos/services/ml/v1/: ml_service.proto
protos/services/strategy/v1/: strategy_service.proto
scripts/: fix_imports.py  generate-python.sh  proto_orchestrator.py  publish-package.sh  publish-release.sh  validate-breaking.sh
